<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:dividerPadding="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/product_name"
            android:inputType="textCapWords"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="price"
            android:hint="@string/product_price"
            android:inputType="numberDecimal"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/product_description"
            android:inputType="textCapSentences"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="stock"
            android:hint="@string/product_stock"
            android:inputType="number"
            android:padding="15dp" />

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="category"
            android:hint="@string/product_category"
            android:inputType="textCapWords"
            android:padding="15dp" />
    </LinearLayout>
</ScrollView>