<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColor="#000"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:textColor="#000"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColor="#000"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColor="#000"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#6200EE"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/registerWithGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/google_button_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/text_login_with_google"
            android:src="@drawable/ic_google_logo" />

        <TextView
            android:id="@+id/googleButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/text_login_with_google"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
